--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.5",
+    "@angular/cdk": "^11.2.4",
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
     "@angular/forms": "~11.2.5",
+    "@angular/material": "^11.2.4",
+    "@angular/material-moment-adapter": "^11.2.4",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "angular-moment": "^1.3.0",
+    "jasmine-marbles": "^0.8.1",
+    "mockdate": "^3.0.2",
+    "ngx-indexed-db": "^6.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -37,6 +44,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
